# lateralus

./: .gitignore  CMakeLists.txt  voicechat.service
.github/workflows/: build.yml
client/: Info.plist  client.c  encoder.c  gui.cpp  gui_gtk.c  gui_macos.m  screen_capture.c  screen_share.c
common/: crypto.h  encoder.h  protocol.h  screen_capture.h  vad.h  vc_api.h
server/: server.c
